test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/trailing_multiple_outer_attributes.sw
library;

#[allow(dead_code)]
#[allow(deprecated)]